--- a/main.html
+++ b/main.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Progress Bar</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	
+
   <div class="container">
     <div class="progress-container">
       <div class="progress" id="progress"></div>
@@ -18,15 +16,12 @@
       <div class="circle" id="circle-4">4</div>
       <div class="circle" id="circle-5">5</div>
     </div>
-
     <div class="buttons">
       <button id="prev" disabled>Previous</button>
       <button id="next">Next</button>
     </div>
   </div>
-    <script type="text/javascript" src="./script.js">
-</script>
 
+  <script src="script.js"></script>
 </body>
-
 </html>
